fixed alignment issues

--- a/react-app/src/components/AuthForms/LoginForm/loginForm.css
+++ b/react-app/src/components/AuthForms/LoginForm/loginForm.css
@@ -6,6 +6,12 @@
     width: 270px;
     box-sizing: border-box;
     height: 400px;
+    animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+    from {opacity: 0; }
+    to {opacity: 1;}
 }
 
 .auth-box h4 {
