--- a/react-app/src/components/AuthForms/authForms.css
+++ b/react-app/src/components/AuthForms/authForms.css
@@ -5,6 +5,7 @@
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
     display: flex;
     justify-content: center;
+    transition: all 0.25s ease-in 0s;
 }
 
 #hub-sidebar {
